--- a/styly.css
+++ b/styly.css
@@ -13,6 +13,14 @@ body {
   width: 400px;
   background-color: #283e50;
   margin: 100px;
+  border-top-right-radius: 5%;
+  border-top-left-radius: 5%;
+  
+}
+
+.obrazek {
+  border-top-right-radius: 5%;
+  border-top-left-radius: 5%;
 }
 
 h1, p, a {
