--- a/styly.css
+++ b/styly.css
@@ -1,3 +1,8 @@
+html {
+  height: 100%;
+}
+
+
 body {
   background-image: linear-gradient(#615dad, #ffc8da);
   background-repeat: no-repeat;
@@ -48,8 +53,6 @@ p {
   list-style-type: none;
   margin: 0px;
   padding: 0px;
-  display: flex;
-  flex-direction: column;
 }
 
 li {
