--- a/styly.css
+++ b/styly.css
@@ -1,56 +1,92 @@
+/* tělo */
+
 html {
   min-height: 100vh;
 }
-
 
 body {
   background-image: linear-gradient(#615dad, #ffc8da);
   background-repeat: no-repeat;
   height: 100%;
   width: 100%;
-  display: flex;
-  align-items: center;
-  background-size: 100% 100%;
-  justify-content: center;
   margin: 0px;
 }
 
 .uvod {
   width: 90%;
   background-color: #283e50;
-  margin-top: 20px;
-  border-top-right-radius: 5%;
-  border-top-left-radius: 5%;
-  
+  margin: 20px auto;
+  border-top-right-radius: 5px;
+  border-top-left-radius: 5px;
 }
 
+/* hlavička */
+
 .obrazek {
-  border-top-right-radius: 5%;
-  border-top-left-radius: 5%;
+  border-top-right-radius: 5px;
+  border-top-left-radius: 5px;
   width: 100%;
 }
 
-.text {
-  border-top-right-radius: 5%;
-  border-top-left-radius: 5%;
-}
-
 .nazev {
-  font-family: 'Lobster', cursive; 
+  font-family: 'Lobster', cursive;
   font-size: 50px;
-  margin: 20px 5px;
+  margin: 0px;
+  padding: 20px 5px;
   color: #ffffff;
   text-align: center;
-  
 }
 
 .texty {
-  padding-left: 20px;
-  padding-right: 20px;
+  color: #ffffff;
+  font-family: 'Raleway', sans-serif;
+  text-align: center;
+  padding: 0px 20px;
+}
+
+.obal {
+  max-width: 85%;
+  margin: 0px auto;
+}
+
+.seznam {
+  text-align: left;
+  max-width: 90%;
+  padding-left: 30px;
+}
+
+.odrazka {
+  margin-bottom: 15px;
+  padding-left: 10px;
+}
+
+.kolecko,
+.krizek {
+  filter: invert(100%);
+  width: 1em;
+  height: 1em;
+}
+
+/* nápovědy */
+
+figure {
+  margin: 40px auto;
+  width: 85%;
+}
+
+.ukazka {
+  width: 100%;
+}
+
+.popis {
+  font-family: 'Raleway', sans-serif;
   color: #ffffff;
   text-align: center;
-  font-family: 'Raleway', sans-serif;
+  margin: 10px auto 0px;
+  width: 90%;
 }
+
+/* tlačítka */
 
 .tlacitka {
   text-decoration: none;
@@ -59,7 +95,7 @@ body {
   padding: 0px;
 }
 
-li {
+.tlacitko {
   width: 100%;
 }
 
@@ -72,13 +108,6 @@ a {
   font-family: 'Raleway', sans-serif;
 }
 
-
-.pravidla {
-  background-color: #1fcca4;
-  margin-bottom: 2px;
-  width: 100%;
-}
-
 .uvodni {
   background-color: #1fcca4;
   margin-bottom: 2px;
@@ -87,6 +116,12 @@ a {
 
 .zacit {
   background-color: #0197f6;
+}
+
+.pravidla {
+  background-color: #1fcca4;
+  margin-bottom: 2px;
+  width: 100%;
 }
 
 .pravidla:hover,
@@ -104,37 +139,33 @@ a {
   background-color: #0090e9;
 }
 
-.seznam {
-  text-align: left;
-  width: 80%;
-  margin: 0px auto;
-  padding: 0px;
-}
+/* široká obrazovka */
 
-.odrazka {
-  margin-bottom: 15px;
-}
-
-.kolecko, .krizek {
-  filter: invert(100%);
-  width: 1em;
-  height: 1em
-}
-
-.ukazka {
-  width: 100%;
-  margin-top: 40px;
-}
-
-.popis {
-  font-family: 'Raleway', sans-serif;
-  color: #ffffff;
-  text-align: center;
-  margin-top: 10px;
-}
-
-@media screen and (min-width: 950px) {
+@media screen and (min-width: 1000px) {
   .uvod {
     width: 80%;
+  }
+
+  .obrukazky {
+    display: flex;
+    flex-wrap: wrap;
+    width: 85%;
+    margin: 0px auto;
+  }
+
+  figure {
+    width: 45%;
+  }
+
+  a {
+    padding: 20px;
+  }
+}
+
+/* velmi široká obrazovka */
+
+@media screen and (min-width: 2800px) {
+  .uvod {
+    width: 25%;
   }
 }
