--- a/styly.css
+++ b/styly.css
@@ -50,14 +50,14 @@ body {
 }
 
 .seznam {
+  list-style-position: inside;
   text-align: left;
   max-width: 90%;
-  padding-left: 30px;
+  padding: 0px;
 }
 
 .odrazka {
   margin-bottom: 15px;
-  padding-left: 10px;
 }
 
 .kolecko,
@@ -140,23 +140,112 @@ a {
   background-color: #0090e9;
 }
 
+/* hra */
+
+.stranka {
+  max-width: 80vmin;
+  margin: 0px auto 50px;
+}
+
+.navigace {
+  display: flex;
+  justify-content: space-between;
+}
+
+.hraje {
+text-transform: uppercase;
+font-weight: bold;
+margin: 0px;
+padding: 0px;
+font-size: 20px;
+text-align: left;
+}
+
+.circle {
+  border: 2px solid white;
+  border-radius: 50%;
+  width: 1em;
+  height: 1em;
+  display: inline-block;
+  margin-left: 3px;
+  position: relative;
+    top: 3px;
+}
+
+.buttony {
+  display: flex;
+  align-items: center;
+}
+
+.znovu {
+  background-color: #0197f6;
+}
+
+.domu {
+  background-color: #1fcca4;
+}
+
+.znovu,
+.domu {
+  display: flex;
+  justify-content: center;
+  width: 45px;
+  height: 45px;
+  margin: 0px 3px;
+  border-radius: 5px;
+}
+
+.domu:hover,
+.domu:focus {
+  background-color: #1cbb96;
+}
+
+.znovu:hover,
+.znovu:focus {
+  background-color: #0090e9;
+}
+
+.pole {
+  display: flex;
+  flex-wrap: wrap;
+  background-image: linear-gradient(#615dad, #ffc8da);
+  max-width: 80vmin;
+  margin-top: 20px;
+}
+
+.policko {
+  margin: 0px;
+  padding: 0px;
+  width: 10%;
+  height: 8vmin;
+  opacity: 0.4;
+  border: 1px solid black;
+}
+
+.policko:hover {
+  opacity: 0.7;
+}
+
+
 /* široká obrazovka */
 
 @media screen and (min-width: 1000px) {
   .uvod {
     width: 80%;
-    max-width: 750px;
+    max-width: 600px;
   }
 
   .obrukazky {
     display: flex;
     flex-wrap: wrap;
+    justify-content: space-between;
     width: 85%;
     margin: 0px auto;
   }
 
   figure {
-    width: 45%;
+    width: 48%;
+    margin: 40px 0px;
   }
 
   a {
