--- a/styly.css
+++ b/styly.css
@@ -173,6 +173,29 @@ a {
   top: 3px;
 }
 
+.cross {
+  width: 50px;
+  height: 50px;
+  position: relative;
+}
+
+.cross::before,
+.cross::after {
+  content: '';
+  display: block;
+  height: 4px;
+  background-color: white;
+  position: absolute;
+  bottom: 0px;
+  left: 0px;
+  right: 0px;
+  transform: rotate(45deg);
+}
+
+.cross::after {
+  transform: rotate(-45deg);
+}
+
 .buttony {
   display: flex;
   align-items: center;
@@ -230,12 +253,14 @@ a {
 
 .board__field--circle {
   background-image: url('images/circle.svg');
+  background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
 }
 
 .board__field--cross {
   background-image: url('images/cross.svg');
+  background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
 }
